--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -1,24 +1,9 @@
 <!doctype html>
-<html ng-cloak ng-csp ng-app="Autopilot">
+<html>
 <head>
-    <base href="/chrome-autopilot-tool/">
     <title></title>
 </head>
 <body>
-<div ng-controller="Autopilot">
-    <div ng-controller="ComandList">
-
-    </div>
-</div>
-<script src="bower_components/angular/angular.js"></script>
-
-<script src="src/js/lib/xpath.js"></script>
-<script src="src/js/selenium-ide/recorder.js"></script>
-<script src="src/js/selenium-ide/recorder-handlers.js"></script>
-
-<script src="src/ts/application/Controller/Autopilot.js"></script>
-<script src="src/ts/application/Controller/ComandList.js"></script>
-
-<script src="src/ts/application/popup.js"></script>
+<script src="/src/js/popup.js"></script>
 </body>
 </html>
