--- a/src/html/window.html
+++ b/src/html/window.html
@@ -15,7 +15,7 @@
             {{command.value}}
         </li>
     </ul>
-    <input type="button" ng-click="playAll()">
+    <input type="button" value="submit" ng-click="playAll()">
 </div>
 <script src="/bower_components/jQuery/dist/jquery.js"></script>
 <script src="/bower_components/jqueryui/ui/jquery-ui.js"></script>
