--- a/src/html/window.html
+++ b/src/html/window.html
@@ -11,26 +11,27 @@
 <div ng-controller="Autopilot">
     <div class="baseURL"><span>Base URL</span><input type="text"></div>
     <div class="testControl">
-        <input type="range">
-        <img src="/src/img/play_all.png">
-        <img src="/src/img/play_current.png">
-        <img src="/src/img/stop.png">
-        <img src="/src/img/play_one.png">
+        <div class="play">
+            <input class="range" type="range">
+            <img src="/src/img/panel/play_all.png" ng-click="playAll()">
+            <img src="/src/img/panel/play_current.png">
+            <img src="/src/img/panel/stop.png">
+            <img src="/src/img/panel/play_one.png">
+        </div>
         <div class="rec">
-            <img src="/src/img/rec_start.png">
-            <img src="/src/img/rec_stop.png">
+            <img src="/src/img/panel/rec_start.png">
+            <img src="/src/img/panel/rec_stop.png">
         </div>
     </div>
-    <ul class="commandGrid" ui-sortable ng-model="commandList.commands">
-        <li ng-repeat="command in commandList.commands">
+    <ul class="commandGrid" ui-sortable ng-model="commandGrid.list">
+        <li ng-repeat="command in commandGrid.getList()">
             <input class="type" type="text" ng-model="command.type">
             <input class="target" type="text" ng-model="command.target">
             <input class="value" type="text" ng-model="command.value">
-            <input type="button" value="del" ng-click="commandList.remove(command)">
+            <input type="button" value="del" ng-click="commandGrid.remove(command)">
         </li>
     </ul>
-    <input type="button" value="add" ng-click="">
-    <input type="button" value="playAll" ng-click="playAll()">
+    <input type="button" value="add" ng-click="addCommand()">
 </div>
 <script src="/bower_components/jQuery/dist/jquery.js"></script>
 <script src="/bower_components/jqueryui/ui/jquery-ui.js"></script>
