--- a/extension/html/window.html
+++ b/extension/html/window.html
@@ -37,6 +37,7 @@
 <script src="/bower_components/jqueryui/ui/jquery-ui.js"></script>
 <script src="/bower_components/angular/angular.js"></script>
 <script src="/bower_components/angular-ui-sortable/sortable.js"></script>
+<script src="/bower_components/eventemitter2/lib/eventemitter2.js"></script>
 
 <script src="/js/selenium-ide/deferred.js"></script>
 <script src="/js/selenium-ide/htmlutils.js"></script>
