refactoring build settings.

--- a/extension/html/window.html
+++ b/extension/html/window.html
@@ -52,6 +52,7 @@
 <script src="/js/selenium-ide/selenium-testrunner.js"></script>
 <script src="/js/selenium-ide/selenium-runner.js"></script>
 
+<script src="/js/application.js"></script>
 <script src="/js/window.js"></script>
 </body>
 </html>
