--- a/extension/html/window.html
+++ b/extension/html/window.html
@@ -39,20 +39,21 @@
 <script src="/bower_components/angular-ui-sortable/sortable.js"></script>
 <script src="/bower_components/eventemitter2/lib/eventemitter2.js"></script>
 
-<script src="/js/selenium-ide/deferred.js"></script>
-<script src="/js/selenium-ide/htmlutils.js"></script>
-<script src="/js/selenium-ide/tools.js"></script>
-<script src="/js/selenium-ide/testCase.js"></script>
-<script src="/js/selenium-ide/selenium-atoms.js"></script>
-<script src="/js/selenium-ide/selenium-api.js"></script>
-<script src="/js/selenium-ide/selenium-browserbot.js"></script>
-<script src="/js/selenium-ide/selenium-commandhandlers.js"></script>
-<script src="/js/lib/chrome-extension-backed-selenium.js"></script>
-<script src="/js/selenium-ide/selenium-executionloop.js"></script>
-<script src="/js/selenium-ide/selenium-testrunner.js"></script>
-<script src="/js/selenium-ide/selenium-runner.js"></script>
+<script src="/src/selenium-ide/deferred.js"></script>
+<script src="/src/selenium-ide/htmlutils.js"></script>
+<script src="/src/selenium-ide/tools.js"></script>
+<script src="/src/selenium-ide/testCase.js"></script>
+<script src="/src/selenium-ide/selenium-atoms.js"></script>
+<script src="/src/selenium-ide/selenium-api.js"></script>
+<script src="/src/selenium-ide/selenium-browserbot.js"></script>
+<script src="/src/selenium-ide/selenium-commandhandlers.js"></script>
+<script src="/src/lib/chrome-extension-backed-selenium.js"></script>
+<script src="/src/selenium-ide/selenium-executionloop.js"></script>
+<script src="/src/selenium-ide/selenium-testrunner.js"></script>
+<script src="/src/selenium-ide/selenium-runner.js"></script>
 
-<script src="/js/application.js"></script>
-<script src="/js/window.js"></script>
+<script src="/src/_define.js"></script>
+<script src="/src/application.js"></script>
+<script src="/src/window.js"></script>
 </body>
 </html>
